force-app/main/default/objects/Promoter_Attendance__c/Promoter_Attendance__c.object-meta.xml
<CustomObject>
    <label>Attendance</label>
    <nameField>
        <displayFormat>PA-{YYYY}{MM}{0000}</displayFormat>
        <label>考勤编号</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Attendance</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>