force-app/main/default/objects/Promoter_Attendance__c/fields/Add_Check_Shop__c.field-meta.xml
<CustomField>
    <fullName>Add_Check_Shop__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>补签门店</label>
    <referenceTo>Shop__c</referenceTo>
    <relationshipName>Promoter_Attendance_Add_Check</relationshipName>
    <type>Lookup</type>
</CustomField>