force-app/main/default/objects/Promoter_Attendance__c/fields/AddCheckInReason__c.field-meta.xml
<CustomField>
    <fullName>AddCheckInReason__c</fullName>
    <label>补签原因</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>