force-app/main/default/objects/Promoter_Attendance__c/fields/AddCheckSignInTime__c.field-meta.xml
<CustomField>
    <fullName>AddCheckSignInTime__c</fullName>
    <label>补签签到时间</label>
    <type>Time</type>
</CustomField>