force-app/main/default/objects/Promoter_Attendance__c/fields/ApprovalStatus__c.field-meta.xml
<CustomField>
    <fullName>ApprovalStatus__c</fullName>
    <defaultValue>(&quot;未创建&quot;)</defaultValue>
    <label>补签签到审批状态</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>已提交补签申请</fullName>
            </value>
            <value>
                <fullName>补签申请审批通过</fullName>
            </value>
            <value>
                <fullName>补签申请审批拒绝</fullName>
            </value>
            <value>
                <fullName>未提交补签申请</fullName>
                <label>已创建未提交补签申请</label>
            </value>
            <value>
                <fullName>未创建</fullName>
                <default>true</default>
                <label>未创建</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>