force-app/main/default/objects/Promoter_Attendance__c/fields/Attendance_Gridding__c.field-meta.xml
<CustomField>
    <fullName>Attendance_Gridding__c</fullName>
    <formula>IF( ISBLANK( Checkin_Gridding__c ) ,  IF(  ISBLANK( Checkout_Gridding__c ) , &apos;&apos;,  Checkout_Gridding__c ) ,  Checkin_Gridding__c )</formula>
    <label>Attendance Gridding</label>
    <type>Text</type>
</CustomField>