force-app/main/default/objects/Promoter_Attendance__c/fields/Attendance_Type__c.field-meta.xml
<CustomField>
    <fullName>Attendance_Type__c</fullName>
    <label>考勤类型</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>出勤日</fullName>
                <default>true</default>
                <label>出勤日</label>
            </value>
            <value>
                <fullName>休息日</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>