force-app/main/default/objects/Promoter_Attendance__c/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <description>签到门店所属的渠道</description>
    <formula>IF( ISBLANK( Shop__c ) ,  CheckOutShop__r.Channel_item__r.Name , Shop__r.Channel_item__r.Name)</formula>
    <label>Channel</label>
    <type>Text</type>
</CustomField>