force-app/main/default/objects/Promoter_Attendance__c/fields/Check_in_Store_Customer__c.field-meta.xml
<CustomField>
    <fullName>Check_in_Store_Customer__c</fullName>
    <formula>Shop__r.Account_Name__c</formula>
    <label>Check-in Store Customer</label>
    <type>Text</type>
</CustomField>