force-app/main/default/objects/Promoter_Attendance__c/fields/Check_in_Store_Customer_Code__c.field-meta.xml
<CustomField>
    <fullName>Check_in_Store_Customer_Code__c</fullName>
    <formula>Shop__r.Account__r.SAP_Customer_Code__c</formula>
    <label>Check-in Store Customer Code</label>
    <type>Text</type>
</CustomField>