force-app/main/default/objects/Promoter_Attendance__c/fields/Check_in_Store_District__c.field-meta.xml
<CustomField>
    <fullName>Check_in_Store_District__c</fullName>
    <formula>Shop__r.District__c</formula>
    <label>Check-in Store District</label>
    <type>Text</type>
</CustomField>