force-app/main/default/objects/Promoter_Attendance__c/fields/Check_in_Store_Name__c.field-meta.xml
<CustomField>
    <fullName>Check_in_Store_Name__c</fullName>
    <formula>Shop__r.Name</formula>
    <label>Check-in Store Name</label>
    <type>Text</type>
</CustomField>