force-app/main/default/objects/Promoter_Attendance__c/fields/Check_in_Store_shopcode__c.field-meta.xml
<CustomField>
    <fullName>Check_in_Store_shopcode__c</fullName>
    <formula>Shop__r.Shop_Code__c</formula>
    <label>Check-in Store shopcode</label>
    <type>Text</type>
</CustomField>