force-app/main/default/objects/Promoter_Attendance__c/fields/Check_Out_Has_Photo__c.field-meta.xml
<CustomField>
    <fullName>Check_Out_Has_Photo__c</fullName>
    <label>Check Out Has Photo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>