force-app/main/default/objects/Promoter_Attendance__c/fields/Check_out_Status__c.field-meta.xml
<CustomField>
    <fullName>Check_out_Status__c</fullName>
    <label>Check-out Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Check_in_out_Status</valueSetName>
    </valueSet>
</CustomField>