force-app/main/default/objects/Promoter_Attendance__c/fields/Check_out_Time_Cal__c.field-meta.xml
<CustomField>
    <fullName>Check_out_Time_Cal__c</fullName>
    <description>根据Promoter Attendance Information表数据自动计算签退时间</description>
    <label>Check out Time(Cal)</label>
    <summarizedField>Promoter_Attendance_Information__c.CheckIn_Time__c</summarizedField>
    <summaryFilterItems>
        <field>Promoter_Attendance_Information__c.Type__c</field>
        <operation>equals</operation>
        <value>Check out</value>
    </summaryFilterItems>
    <summaryForeignKey>Promoter_Attendance_Information__c.Promoter_Attendance__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>