force-app/main/default/objects/Promoter_Attendance__c/fields/CheckIn_Date__c.field-meta.xml
<CustomField>
    <fullName>CheckIn_Date__c</fullName>
    <label>打卡日期</label>
    <type>Date</type>
</CustomField>