force-app/main/default/objects/Promoter_Attendance__c/fields/Checkin_Gridding__c.field-meta.xml
<CustomField>
    <fullName>Checkin_Gridding__c</fullName>
    <formula>Shop__r.Grid__r.Name</formula>
    <label>Checkin Gridding</label>
    <type>Text</type>
</CustomField>