force-app/main/default/objects/Promoter_Attendance__c/fields/CheckInAddress__c.field-meta.xml
<CustomField>
    <fullName>CheckInAddress__c</fullName>
    <label>签到地址</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>