force-app/main/default/objects/Promoter_Attendance__c/fields/CheckInDevice__c.field-meta.xml
<CustomField>
    <fullName>CheckInDevice__c</fullName>
    <label>签到设备</label>
    <length>255</length>
    <type>Text</type>
</CustomField>