force-app/main/default/objects/Promoter_Attendance__c/fields/CheckInStatus__c.field-meta.xml
<CustomField>
    <fullName>CheckInStatus__c</fullName>
    <label>考勤状态</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>已签到</fullName>
                <label>Checked in / Not check out</label>
            </value>
            <value>
                <fullName>已签退</fullName>
                <label>Not check in/ Checked out</label>
            </value>
            <value>
                <fullName>未签到</fullName>
                <default>true</default>
                <label>Not Check in&amp;out</label>
            </value>
            <value>
                <fullName>已签到签退</fullName>
                <label>Checked in&amp;out</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>