force-app/main/default/objects/Promoter_Attendance__c/fields/Checkout_Gridding__c.field-meta.xml
<CustomField>
    <fullName>Checkout_Gridding__c</fullName>
    <formula>CheckOutShop__r.Grid__r.Name</formula>
    <label>Checkout Gridding</label>
    <type>Text</type>
</CustomField>