force-app/main/default/objects/Promoter_Attendance__c/fields/CheckOutAddress__c.field-meta.xml
<CustomField>
    <fullName>CheckOutAddress__c</fullName>
    <label>签退地址</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>