force-app/main/default/objects/Promoter_Attendance__c/fields/CheckOutDevice__c.field-meta.xml
<CustomField>
    <fullName>CheckOutDevice__c</fullName>
    <label>签退设备</label>
    <length>255</length>
    <type>Text</type>
</CustomField>