force-app/main/default/objects/Promoter_Attendance__c/fields/CheckOutShop__c.field-meta.xml
<CustomField>
    <fullName>CheckOutShop__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>签退门店</label>
    <referenceTo>Shop__c</referenceTo>
    <relationshipName>CheckOutShopTTRR</relationshipName>
    <type>Lookup</type>
</CustomField>