force-app/main/default/objects/Promoter_Attendance__c/fields/Daily_Inspection_Report__c.field-meta.xml
<CustomField>
    <fullName>Daily_Inspection_Report__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>巡店员日报</label>
    <referenceTo>Daily_Inspection_Report__c</referenceTo>
    <relationshipName>Promoter_Attendance_Report</relationshipName>
    <type>Lookup</type>
</CustomField>