force-app/main/default/objects/Promoter_Attendance__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <description>获取User表里的Hisense Department</description>
    <formula>text(CreatedBy.Department__c)</formula>
    <label>Division</label>
    <type>Text</type>
</CustomField>