force-app/main/default/objects/Promoter_Attendance__c/fields/Display_Pictures__c.field-meta.xml
<CustomField>
    <fullName>Display_Pictures__c</fullName>
    <label>Display Pictures</label>
    <length>255</length>
    <type>Text</type>
</CustomField>