force-app/main/default/objects/Promoter_Attendance__c/fields/InspectionShopTask__c.field-meta.xml
<CustomField>
    <fullName>InspectionShopTask__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>巡店任务</label>
    <referenceTo>Inspection_Shop_Task__c</referenceTo>
    <relationshipName>Inspector_Attendance</relationshipName>
    <type>Lookup</type>
</CustomField>