force-app/main/default/objects/Promoter_Attendance__c/fields/Is_Refill_Check_In__c.field-meta.xml
<CustomField>
    <fullName>Is_Refill_Check_In__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Refill (Check In)</label>
    <type>Checkbox</type>
</CustomField>