force-app/main/default/objects/Promoter_Attendance__c/fields/Marketing_display_condition__c.field-meta.xml
<CustomField>
    <fullName>Marketing_display_condition__c</fullName>
    <label>Marketing display condition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>