force-app/main/default/objects/Promoter_Attendance__c/fields/Name_of_FSPs__c.field-meta.xml
<CustomField>
    <fullName>Name_of_FSPs__c</fullName>
    <label>Name of FSPs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>