force-app/main/default/objects/Promoter_Attendance__c/fields/Name_of_Store_Manager__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Store_Manager__c</fullName>
    <label>Name of Store Manager</label>
    <length>255</length>
    <type>Text</type>
</CustomField>