force-app/main/default/objects/Promoter_Attendance__c/fields/Product_Features_Sales_Skill__c.field-meta.xml
<CustomField>
    <fullName>Product_Features_Sales_Skill__c</fullName>
    <label>Product Features &amp; Sales Skill</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Laser Line-up</fullName>
            </value>
            <value>
                <fullName>Introduction to Laser</fullName>
            </value>
            <value>
                <fullName>Laser vs LED vs Projector</fullName>
            </value>
            <value>
                <fullName>How to demo Laser EMF (Electro-magnetic Radiation)</fullName>
            </value>
            <value>
                <fullName>Laser Target Groups (Which customers)</fullName>
            </value>
            <value>
                <fullName>Laser advantages and Sales Pitches</fullName>
            </value>
            <value>
                <fullName>Usage Scenarios</fullName>
            </value>
            <value>
                <fullName>Laser setup, Settings, and Maintenance</fullName>
            </value>
            <value>
                <fullName>Assessment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>