force-app/main/default/objects/Promoter_Attendance__c/fields/PromoterDailyReport__c.field-meta.xml
<CustomField>
    <fullName>PromoterDailyReport__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>促销员日报</label>
    <referenceTo>Promoter_Daily_Report__c</referenceTo>
    <relationshipName>PromoterDailyReportZiFT</relationshipName>
    <type>Lookup</type>
</CustomField>