force-app/main/default/objects/Promoter_Attendance__c/fields/Promotion_Focus__c.field-meta.xml
<CustomField>
    <fullName>Promotion_Focus__c</fullName>
    <label>Promotion Focus</label>
    <length>255</length>
    <type>Text</type>
</CustomField>