force-app/main/default/objects/Promoter_Attendance__c/fields/Second_Show__c.field-meta.xml
<CustomField>
    <fullName>Second_Show__c</fullName>
    <label>Second Show</label>
    <length>255</length>
    <type>Text</type>
</CustomField>