force-app/main/default/objects/Promoter_Attendance__c/fields/Shop__c.field-meta.xml
<CustomField>
    <fullName>Shop__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>签到门店</label>
    <referenceTo>Shop__c</referenceTo>
    <relationshipName>Shop_Promoter_Attendance</relationshipName>
    <type>Lookup</type>
</CustomField>