force-app/main/default/objects/Promoter_Attendance__c/fields/SignInLocation__c.field-meta.xml
<CustomField>
    <fullName>SignInLocation__c</fullName>
    <label>签到定位</label>
    <scale>6</scale>
    <type>Location</type>
</CustomField>