force-app/main/default/objects/Promoter_Attendance__c/fields/SignInTime__c.field-meta.xml
<CustomField>
    <fullName>SignInTime__c</fullName>
    <label>签到时间</label>
    <type>Time</type>
</CustomField>