force-app/main/default/objects/Promoter_Attendance__c/fields/SignOut_Distance__c.field-meta.xml
<CustomField>
    <fullName>SignOut_Distance__c</fullName>
    <label>签退定位与门店距离(米)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>