force-app/main/default/objects/Promoter_Attendance__c/fields/SignOutTime__c.field-meta.xml
<CustomField>
    <fullName>SignOutTime__c</fullName>
    <label>签退时间</label>
    <type>Time</type>
</CustomField>