force-app/main/default/objects/Promoter_Attendance__c/fields/Trainer__c.field-meta.xml
<CustomField>
    <fullName>Trainer__c</fullName>
    <label>Trainer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>