force-app/main/default/objects/Promoter_Attendance__c/fields/Training_Content__c.field-meta.xml
<CustomField>
    <fullName>Training_Content__c</fullName>
    <label>Training Content</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>