force-app/main/default/objects/Promoter_Attendance__c/fields/Training_Object__c.field-meta.xml
<CustomField>
    <fullName>Training_Object__c</fullName>
    <label>Training Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>