force-app/main/default/objects/Promoter_Attendance__c/fields/Training_Theme__c.field-meta.xml
<CustomField>
    <fullName>Training_Theme__c</fullName>
    <label>Training Theme</label>
    <length>255</length>
    <type>Text</type>
</CustomField>