force-app/main/default/objects/Promoter_Attendance__c/recordTypes/InspectorAttendace.recordType-meta.xml
<RecordType>
    <fullName>InspectorAttendace</fullName>
    <active>true</active>
    <label>巡店员考勤</label>
</RecordType>