force-app/main/default/objects/Promoter_Attendance__c/recordTypes/PromoterAttendance.recordType-meta.xml
<RecordType>
    <fullName>PromoterAttendance</fullName>
    <active>true</active>
    <label>促销员考勤</label>
</RecordType>