force-app/main/default/objects/Promoter_Attendance__c/recordTypes/TrainAttendace.recordType-meta.xml
<RecordType>
    <fullName>TrainAttendace</fullName>
    <active>true</active>
    <label>培训考勤</label>
</RecordType>