force-app/main/default/objects/Promoter_Attendance__c/validationRules/CAN_NOT_UPDATE_CHECK_IN_DATE.validationRule-meta.xml
<ValidationRule>
    <fullName>CAN_NOT_UPDATE_CHECK_IN_DATE</fullName>
    <active>true</active>
    <description>考勤一旦创建，打卡日期不可更改</description>
    <errorConditionFormula>ISCHANGED(CheckIn_Date__c)</errorConditionFormula>
    <errorMessage>考勤一旦创建，打卡日期不可更改</errorMessage>
</ValidationRule>