force-app/main/default/objects/Promoter_Attendance__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>OwnerSalesRegion__c</columns>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>CheckIn_Date__c</columns>
    <columns>CheckInStatus__c</columns>
    <columns>Attendance_Type__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>SignInTime__c</columns>
    <columns>Shop__c</columns>
    <columns>SignOutTime__c</columns>
    <columns>CheckOutShop__c</columns>
    <columns>Work_Time__c</columns>
    <columns>Check_in_Type__c</columns>
    <columns>Check_out_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OwnerSalesRegion__c</field>
        <operation>equals</operation>
        <value>Hisense Thailand</value>
    </filters>
    <label>All</label>
</ListView>