force-app/main/default/objects/Promoter_Attendance__c/listViews/MySignin.listView-meta.xml
<ListView>
    <fullName>MySignin</fullName>
    <columns>NAME</columns>
    <columns>CheckIn_Date__c</columns>
    <columns>Shop__c</columns>
    <columns>SignInTime__c</columns>
    <columns>CheckOutShop__c</columns>
    <columns>SignOutTime__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Is_Today__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>My Attendance</label>
</ListView>