force-app/main/default/objects/Promoter_Attendance__c/listViews/SA_Attendance.listView-meta.xml
<ListView>
    <fullName>SA_Attendance</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>CheckIn_Date__c</columns>
    <columns>CheckInStatus__c</columns>
    <columns>Attendance_Type__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>SignInTime__c</columns>
    <columns>Shop__c</columns>
    <columns>SignOutTime__c</columns>
    <columns>CheckOutShop__c</columns>
    <columns>Work_Time__c</columns>
    <columns>Check_in_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OwnerSalesRegion__c</field>
        <operation>equals</operation>
        <value>Hisense South Africa</value>
    </filters>
    <label>SA-Attendance</label>
    <sharedTo>
        <roleAndSubordinatesInternal>South_Africa_GM</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>